--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Ankit Balyan",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.14.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
