--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "build": "node_modules/.bin/webpack",
-    "test": "echo \"Error: no test specified\" && exit 1 "
+    "test": "echo \"Error: no test specified\" && exit 1 ",
+    "start": "node server.js"
   }
 }
