--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0"
+    "babel-preset-react": "^6.22.0",
+    "compression-webpack-plugin": "^0.3.2",
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "build": "node_modules/.bin/webpack",
