--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.1",
+    "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "sass-loader": "^5.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
